Fix crash when closing session

Instead of manually deleting the output suspended label let the QObject
cleanup handle it.

Now it is first deleted manually by us, leading to a potential crash,
and afterwards the QObject cleanup runs, but luckily it doesn' try to
destroy it again.

REVIEW: 128667
BUG: 366706